# cpp-backend-practice

./: .gitignore  README.md
week1/basic_thread/: READMD.md  main.cpp  my_thread_app
week1/book_manager/: Book.h  BookManage.h  CMakeLists.txt  README.md  main.cpp
week1/day3/student_manager/: CMakeLists.txt  README.md  Student.h  StudentManager.h  main.cpp
week1/practice/: CMakeLists.txt  Question.cpp  Question.h  arithmetic  main.cpp
week2/Data_Race/: DataRace  README.md  data_race_atomic  data_race_atomic.cpp  data_race_mutex  data_race_mutex.cpp  data_race_raw  data_race_raw.cpp
week2/Producer-Consumer/: README.md  main.cpp  pc
week2/multi_thread/: README.md  main.cpp  muti_thread
week3/chat_room/: CMakeLists.txt
week3/chat_room/src/: client.cpp  server.cpp
week3/chat_room_v2/: CMakeLists.txt
week3/chat_room_v2/src/: client.cpp  server.cpp
week3/chat_room_v3/: CMakeLists.txt
week3/chat_room_v3/src/: client.cpp  server.cpp
week3/tcp_echo/: CMakeLists.txt  README.md
week3/tcp_echo/include/: Echo.hpp
week3/tcp_echo/src/: client.cpp  main.cpp  server.cpp
week3/tcp_echo_v3/: CMakeLists.txt  README.md
week3/tcp_echo_v3/src/: client.cpp  server.cpp
week3/tcp_practice_echo_v2/: CMakeLists.txt  README.md
week3/tcp_practice_echo_v2/src/: client.cpp  server.cpp
week4/: CMakeLists.txt
week4/chat_client/src/: tcp_client  tcp_client.cpp
week4/chat_room_by_epoll/: CMakeLists.txt
week4/chat_room_by_epoll/include/: Broadcast.hpp  Echo.hpp
week4/chat_room_by_epoll/src/: main.cpp  server.cpp
week4/epoll_echo_server/: CMakeLists.txt
week4/epoll_echo_server/src/: main.cpp  server.cpp
week4/file_transfer_client/: clients  file_transfer_client.cpp
week4/file_transfer_server/: CMakeLists.txt  README.md
week4/file_transfer_server/include/: file.hpp
week4/file_transfer_server/src/: main.cpp  server.cpp
week4/file_transfer_server/uploads/: a.txt
week4/include/: echo.hpp
week4/src/: main.cpp  server.cpp
week4/time_server/: CMakeLists.txt  README.md
week4/time_server/include/: echo.hpp
week4/time_server/src/: main.cpp  server.cpp
week5/file_transfer_server_v2/include/: File.hpp
week5/file_transfer_server_v2/src/: server.cpp
week5/http_static_file_server/: CMakeLists.txt
week5/http_static_file_server/include/: http_server.hpp
week5/http_static_file_server/src/: http_server.cpp  main.cpp
week5/http_static_file_server/www/: index.html
